--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "TOKEN": "YOUR TOKEN",
-  "CHANNEL": "VOICE CHANNEL ID",
-  "SERVER": "SERVER CHANNEL ID",
-  "STATUS": "NCS",
+  "TOKEN": "Nzc2ODM2MDcwMjMwNzIwNTUy.X66q-A.q2hfvPmA9LPfUulogsu1LSmy7T8",
+  "CHANNEL": "783861194112237618",
+  "SERVER": "783685252668588093",
+  "STATUS": "Playing songs in Galaxy",
   "LIVE": "https://www.youtube.com/watch?v=IP0ZRj-_xG4"
 }
